# wattcloud

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile.frontend  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SPEC.md  docker-compose.byo-prod.yml  docker-compose.byo-smoke.yml  docker-compose.yml  package.json  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-skip.yml  ci.yml  codeql.yml  docs.yml  release.yml
byo/: package-lock.json  package.json  tsconfig.json  vite.config.ts
byo-relay/: Cargo.toml  Dockerfile  README.md
byo-relay/src/: channel.rs  client_ip.rs  config.rs  enrollment.rs  enrollment_admin.rs  enrollment_schema.sql  ip_filter.rs  lib.rs  main.rs  rate_limit.rs  relay_auth.rs  relay_ws.rs  security_headers.rs  sftp_relay.rs  share_relay.rs  share_store.rs  stats.rs  stats_schema.sql
byo-server/: Cargo.toml  Dockerfile  README.md
byo-server/src/: channel.rs  client_ip.rs  config.rs  dns.rs  errors.rs  lib.rs  main.rs  rate_limit.rs  relay_auth.rs  relay_ws.rs  security_headers.rs  sftp_relay.rs  share_relay.rs  stats.rs
byo/__tests__/: DownloadStream.test.ts  EtagConflict.test.ts  MockProvider.test.ts  PKCE.test.ts  ProviderFactory.test.ts  SftpTofu.test.ts  UploadStream.test.ts  WasmStorageProviderShim.test.ts  errors.test.ts
byo/__tests__/mocks/: MockProvider.ts
byo/src/: index.ts  types.ts  wasm.d.ts
byo/src/oauth/: OAuthConfig.ts
byo/src/providers/: SftpProvider.ts
byo/src/worker/: byo.worker.ts  byoWorkerClient.ts
docs/: astro.config.mjs  package-lock.json  package.json
docs/public/: CNAME
docs/src/components/: SiteTitle.astro
docs/src/content/docs/: 404.md  faq.mdx  index.mdx  quickstart.mdx
docs/src/styles/: design-system.css  docs-overrides.css
frontend/: .eslintrc.json  eslint.config.js  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/public/: config.json  loading.css  manifest.json
frontend/public/dl/: sw-download.js
frontend/public/share-receive/: sw.js
frontend/src/: main.ts  vite-env.d.ts
frontend/src/lib/: utils.ts
frontend/src/lib/byo/: ByoDataProvider.ts  ConflictResolver.ts  DataProvider.ts  DeviceKeyMigration.ts  DeviceKeyStore.ts  ExifExtractor.ts  IndexedDBWal.ts  OfflineDetector.ts  ProviderConfigStore.ts  ProviderHydrate.ts  SearchIndex.ts  ThumbnailStore.ts  TrashManager.ts  VaultBodyCache.ts  VaultJournal.ts  VaultLifecycle.ts  VaultMigration.ts  WebAuthnGate.ts  accessControl.ts  base64.ts  enrollmentSync.ts  iosSave.ts  shareLimitCopy.ts  shareReceiveSW.ts  shareUploadStreaming.ts  soundFx.ts  streamToDisk.ts
frontend/src/lib/components/: BottomNav.svelte  BottomSheet.svelte  CloudBadge.svelte  CloudEncBadge.svelte  ConfirmModal.svelte  DashboardHeader.svelte  Drawer.svelte  FAB.svelte  FileList.svelte  FilePreview.svelte  FolderTile.svelte  FolderTree.svelte  Icons.svelte  MoveCopyDialog.svelte  PlaceSearch.svelte  RecoveryKeyDisplay.svelte  SelectionToolbar.svelte  SortControl.svelte  StepIndicator.svelte
frontend/src/lib/data/: placeBounds.ts
frontend/src/lib/sdk/: ProviderFactory.ts  errors.ts  index.ts  mainWasm.ts  runtimeConfig.ts  types.ts  wasm.d.ts
frontend/src/lib/stores/: downloadQueue.ts  drawer.ts  files.ts  placeBounds.ts  sorting.ts  storageUsage.ts  uploadQueue.ts
frontend/src/lib/styles/: component-classes.css  (+1 more)
frontend/tests/sdk/: DeviceKeyMigration.test.ts  DownloadStream.test.ts  EtagConflict.test.ts  MockProvider.test.ts  PKCE.test.ts  ProviderConfigStore.test.ts  ProviderFactory.test.ts  SftpTofu.test.ts  UploadStream.test.ts  WasmStorageProviderShim.test.ts  accessControl.test.ts  errors.test.ts  runtimeConfig.test.ts  shareUploadStreaming.test.ts  webShare.test.ts
packaging/: Caddyfile.tmpl  config.json.tmpl  wattcloud.service
packaging/dev-host/: Caddyfile  README.md  config.json  install.sh
scripts/: byo-smoke.sh  ci.sh  deploy-vps.sh  dev.sh  harden-dev.sh  harden-vps.sh  install.sh  lib.sh  oauth-setup.sh  release.sh  uninstall.sh  update.sh  verify-byo-bundle.sh
sdk/sdk-core/: Cargo.toml
sdk/sdk-core/benches/: crypto_bench.rs
sdk/sdk-core/examples/: gen_vectors.rs
sdk/sdk-core/fuzz/: Cargo.toml
sdk/sdk-core/fuzz/fuzz_targets/: shard_envelope_parse.rs  vault_header_parse.rs
sdk/sdk-core/src/: error.rs  lib.rs
sdk/sdk-core/src/api/: mod.rs  provider_http.rs  streaming_put.rs
sdk/sdk-core/src/byo/: cache.rs  enrollment.rs  manifest.rs  merge_rows.rs  mod.rs  multi_vault.rs  oauth.rs  offline_monitor.rs  per_vault_key.rs  pkce.rs  provider.rs  relay_auth.rs  share.rs  share_relay_client.rs  vault_body.rs  vault_crypto.rs  vault_format.rs  vault_journal.rs
sdk/sdk-core/src/byo/cross_provider_move/: execution.rs  mod.rs  reconciler.rs
sdk/sdk-core/src/byo/providers/: box_storage.rs  dropbox.rs  gdrive.rs  mod.rs  onedrive.rs  pcloud.rs  s3.rs  url_guard.rs  webdav.rs
sdk/sdk-core/src/byo/sftp/: client.rs  mod.rs  transport.rs
sdk/sdk-core/src/byo/stats/: error.rs  events.rs  mod.rs  recorder.rs  uploader.rs
sdk/sdk-core/src/byo/streaming/: chunk_writer.rs  constants.rs  download_flow.rs  mod.rs  upload_flow.rs
sdk/sdk-core/src/crypto/: asymmetric.rs  auth.rs  constants.rs  filename.rs  hashing.rs  kdf.rs  master_secret.rs  mod.rs  pqc.rs  reencrypt.rs  symmetric.rs  webauthn.rs  wire_format.rs  zeroize_utils.rs
sdk/sdk-core/src/exif/: mod.rs
sdk/sdk-core/src/keys/: mod.rs
sdk/sdk-core/src/utils/: mod.rs
sdk/sdk-core/src/validation/: mod.rs
sdk/sdk-core/tests/: compatibility_vectors.rs  security_tests.rs
sdk/sdk-wasm/: Cargo.toml
sdk/sdk-wasm/src/: auth.rs  byo.rs  byo_providers.rs  byo_sftp.rs  byo_streaming.rs  byo_vault.rs  crypto.rs  enrollment_session.rs  exif.rs  filename.rs  hashing.rs  kek.rs  keys.rs  lib.rs  oauth.rs  provider_http.rs  stats.rs  streaming_put.rs  util.rs  validation.rs  vault_session.rs  webauthn.rs
sdk/sdk-wasm/tests/: wasm_tests.rs
traefik/: dynamic.yml  traefik.yml
(+86 files in other folders)
