[workspace]
members = ["sdk/sdk-core", "sdk/sdk-wasm"]
# byo-relay has its own workspace (conflicting ml-kem transitive from russh).
exclude = ["byo-relay"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Crypto — versions pinned. Bumping any of these changes V7 ciphertext
# derivation; treat it as a wire-format change and bump the protocol version.
aes-gcm = "0.10"
argon2 = "0.5"
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2.0", features = ["rand_core", "zeroize"] }
ml-kem = { version = "0.2.3", features = ["zeroize"] }
kem = "=0.3.0-pre.0"
blake2 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
hkdf = "0.12"
subtle = "2.5"
typenum = "1.17"
rand = { version = "0.8", features = ["getrandom"] }
rand_chacha = "0.3"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"

# Utilities
zeroize = { version = "1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
thiserror = "1.0"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
