[package]
name = "sdk-core"
version.workspace = true
edition.workspace = true

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }

# Crypto — all optional behind "crypto" feature (default enabled).
# Phase 0: stubs compile without pulling heavy crates if feature is disabled.
# Phase 1: real implementations use the feature (enabled by default).
aes-gcm = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
ml-kem = { workspace = true, optional = true }
kem = { workspace = true, optional = true }
blake2 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
typenum = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
# Used by WebDAVProvider for PROPFIND XML parsing (providers feature only).
quick-xml = { version = "0.36", optional = true }
# Used by the provider URL guard for scheme + host parsing (providers feature).
url = { version = "2.5", optional = true }

[features]
# Wattcloud is BYO-only. Managed-mode modules were removed from this fork.
default = ["crypto", "byo", "providers"]
# Gate BYO vault/provider module.
byo = []
# Enable ProviderHttpClient trait + BYO storage provider implementations.
# Requires consumers (sdk-wasm) to supply a concrete ProviderHttpClient impl.
providers = ["dep:quick-xml", "dep:base64", "dep:sha2", "dep:hmac", "dep:url"]
crypto = [
    "dep:aes-gcm",
    "dep:argon2",
    "dep:x25519-dalek",
    "dep:ml-kem",
    "dep:kem",
    "dep:blake2",
    "dep:sha2",
    "dep:sha3",
    "dep:hmac",
    "dep:hkdf",
    "dep:subtle",
    "dep:typenum",
    "dep:rand",
    "dep:rand_chacha",
    "dep:base64",
    "dep:ed25519-dalek",
]

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1", features = ["rt", "macros"] }

[[bench]]
name = "crypto_bench"
harness = false
